# ghc-compat

./: .gitignore  README.md  ghc-compat.cabal
src/GHC/: Conc.hs  Exts.hs  Foreign.hs  IO.hs  ST.hs  Stack.hs  TopHandler.hs
src/GHC/IO/: Buffer.hs  Encoding.hs  Exception.hs  String.hs
src/GHC/IO/Encoding/: Failure.hs  Iconv.hs  Latin1.hs  Types.hs  UTF16.hs  UTF32.hs  UTF8.hs
src/GHC/Internal/Conc/: Signal.hs
src/GHC/Internal/IO/: Device.hs
src/System/Posix/: Internals.hs
