cabal-version:      3.0
name:               ghc-compat
version:            0.1.0.1
synopsis:           GHC compatibility for MicroHs
description:        This package contains a number of modules that are
                    part of base in GHC.  The modules do not really belong
                    in the MicroHs base library, but are used by some
                    packages, e.g., os-string.
                    .
                    Do not use with GHC.
license:            Apache-2.0
license-file:       LICENSE
author:             Lennart Augustsson
maintainer:         lennart@augustsson.net
copyright:          2025 Lennart Augustsson, The University of Glasgow, 2008-2011
category:           System
build-type:         Simple

extra-doc-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/augustss/ghc-compat

library
    exposed-modules:
        GHC.Foreign
        GHC.IO.Buffer
        GHC.IO.Encoding.Failure
        GHC.IO.Encoding.UTF32
        GHC.IO.Encoding.UTF16
        GHC.IO.Encoding.Latin1
        GHC.IO.Encoding.Types
        GHC.IO.Encoding.Iconv
        GHC.IO.Encoding.UTF8
        GHC.IO.String
        GHC.IO.Encoding
    build-depends:    base >=4.4 && <4.8
    hs-source-dirs:   src
    default-language: Haskell2010
