cabal-version:      3.0
name:               ghc-compat
version:            0.5.1.0
                    -- NOTE: when changing the version number, also
                    -- update the version number in MicroCabal.
synopsis:           GHC compatibility for MicroHs
description:        This package contains a number of modules that are
                    part of base in GHC.  The modules do not really belong
                    in the MicroHs base library, but are used by some
                    packages, e.g., os-string.
                    .
                    Do not use with GHC.
license:            Apache-2.0
license-file:       LICENSE
author:             Lennart Augustsson
maintainer:         lennart@augustsson.net
copyright:          2025 Lennart Augustsson, The University of Glasgow, 2008-2011
category:           System
build-type:         Simple

extra-doc-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/augustss/ghc-compat

library
    exposed-modules:
        GHC.Conc
        GHC.Conc.Sync
        GHC.Exts
        GHC.Foreign
        GHC.Internal.Conc.Signal
        GHC.Internal.IO.Device
        GHC.IO
        GHC.IO.Buffer
        GHC.IO.Encoding
        GHC.IO.Encoding.Failure
        GHC.IO.Encoding.UTF32
        GHC.IO.Encoding.UTF16
        GHC.IO.Encoding.Latin1
        GHC.IO.Encoding.Types
        GHC.IO.Encoding.Iconv
        GHC.IO.Encoding.UTF8
        GHC.IO.Exception
        GHC.IO.String
        GHC.Stack
        GHC.ST
        GHC.TopHandler
        GHC.Types
        Language.Haskell.TH.Quote
        Language.Haskell.TH.Syntax
        System.Posix.Internals
    build-depends:    base >=4.4 && <6.9
    hs-source-dirs:   src
    default-language: Haskell2010
